[metadata]
name = disk-img-tool
version = 0.1.2
description = Resize, list/get/put files and shell into raw disk images
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
author = "Leandro Lisboa Penz"
author_email = "lpenz@lpenz.org"
url = http://github.com/lpenz/disk-img-tool
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
package_dir =
    diskimgtool = src/diskimgtool
packages = find:
scripts =
    src/bin/disk-img-tool
python_requires = >=3.6

[options.packages.find]
where = src

[options.data_files]
share/doc/python-disk-img-tool =
    README.md
    LICENSE
    AUTHORS

[options.extras_require]
test =
    pytest
    pytest-cov

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs .tox .mypy
