[metadata]
name = ptvertmenu
version = 0.2.1
description = Vertical menu widget for prompt-toolkit with optional fzf-inspired search
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
author = "Leandro Lisboa Penz"
author_email = "lpenz@lpenz.org"
url = http://github.com/lpenz/ptvertmenu
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
package_dir =
    ptvertmenu = src/ptvertmenu
packages = find:
scripts =
    src/bin/ptvertmenu-man
python_requires = >=3.9
install_requires = file:requirements.txt

[options.package_data]
ptvertmenu = py.typed

[options.packages.find]
where = src

[options.data_files]
share/doc/python-ptvertmenu =
    README.md
    LICENSE
    AUTHORS

[options.extras_require]
test =
    pytest
    pytest-cov

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs .tox .mypy
